test/functions/castFormalTypeFromNonType-3.good
castFormalTypeFromNonType-3.chpl:4: error: Cannot perform a type cast on a non-type
